# personal-learning-record

./: README.md  go.mod  go.sum
.git-old/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
AI/: AI公司.md  AI模型.md  AI网站.md  数字人.md  模型仓库  算法建模_数据分析工具.md  计算机视觉.md  计算机视觉.md~
FTAN/: README.md
GPU/: GPU核心参数,md  MPI协议  img_4解释.md  reduced规约算法.md  内存.md  内积.md  函数举例子说明.md  概念.md  线程块和内存索引有什么关系.md  规约算法-优化.md  规约算法reduced.md  避免cuda编译器优化导致结果不对.md
app和前端/: Relay  Relay~  什么是什么是V7A V8A  什么是什么是V7A V8A~
arch/: sync_data_solution.drawio
assembly/: assembly.md  print.asm  test.s  内联汇编.md  指令.md  裸函数.md  调用约定.md
demo/: get_capa.py  xxtea.py
dns配置/: ubuntu_dns.md
free-for-dev/: free-for-dev.md
golang/: rpc  每日一库.md
kafka/: kafka
kubernetes/: CNI.md  Kubernetes如何监控Pod的内存使用情况.md  cgroup子系统的资源限制如何调整.md  cgroup都有哪些子系统.md  core-dns.yaml  kube-scheduler  kubelet  kubernetes.md  kubernetes平台  pod共享哪几个namespace  为什么通过cgroup可以限制内存使用 底层原理是什么.md  公有云kubernetes_IP划分.md  动态扩容  负载均衡器  面试问题的题目
linux/: SSD.md  linux.md  linux_bitmap.md  linux_位图.md  linux_内存分析工具.py  windows_内存分析工具.py  保存上下文.md  启动程序.md  引导启动.md  进程-线程-协程-纤程.md
mcp/: README.md
oauth2/: README.md
redis/: redis.md
tcp/: graphql协议.md  grpc协议~  tcp.md  tcp面试题.md  vpc网络  网站搭建.md  网络压测工具.md
vpn/: VPN服务.md
复盘/: 2025-5-25.md
奖金计算器/: 奖金计算器.md
容器/: docker  macos_in_docker.md
微信小程序/: 微信小程序开发.md
数学/: 数学学习计划.md  数学工具.md
机器学习/: softmax.py  最小二乘法.md  最小二乘法.md~
监控/: 监控系统.md
逆向/: apk基本结构.md  java虚拟机.md  需要了解的知识.md
音视频/: ffmpeg-windows开发环境安装.md  js播放器.md  (+10 more)
音视频/基于ffmpeg rtmp推流/: CMakeLists.txt
(+629 files in other folders)
